--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>CSS輪播功能</title>
+    <title>小高的純CSS相簿功能</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
